[build-system]
requires = ["setuptools>=69,<81", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "measurelab"
version = "0.1.0"
description = "DIY audio measurement and analysis suite (GUI + CLI)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Unlicense"}
authors = [
  {name = "MeasureLab maintainers"}
]
dependencies = [
  "numpy>=1.24,<3.0",
  "scipy>=1.11,<1.16",
  "sounddevice>=0.4.6,<0.6",
  "PyQt6>=6.6,<6.11",
  "pyqtgraph>=0.13,<0.15",
  "soundfile>=0.12,<0.14",
  "PyWavelets>=1.5,<1.9",
  "inquirer>=3.1,<4.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.7.0",
  "mypy>=1.9.0",
  "pytest>=7.4.0",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
# Start with a narrow, low-noise rule set focused on correctness and
# the whitespace issue (W293) that currently breaks CI. Broaden later as we
# pay down existing style debt.
select = ["E9", "W292", "W293"]
ignore = []

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
show_error_codes = true
warn_unused_ignores = true
warn_return_any = false
warn_unreachable = true
files = ["src/core", "src/main.py"]

[[tool.mypy.overrides]]
module = "src.gui.*"
ignore_errors = true

[tool.pytest.ini_options]
addopts = "-ra"

